<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>


	<groupId>de.fekl</groupId>
	<artifactId>af-fe</artifactId>
	<version>0.1.0-74</version>

	<properties>

		<JAVA_1_15_HOME>C:/Users/felix/Desktop/wein/jdk-15.0.1</JAVA_1_15_HOME>

		<spring-boot.version>2.3.1.RELEASE</spring-boot.version>

		<log4j.version>2.13.3</log4j.version>

		<json.version>20190722</json.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>15</maven.compiler.target>
		<maven.compiler.source>15</maven.compiler.source>
		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>

		<gmavenplus.version>1.11.1</gmavenplus.version>
		<groovy-wslite.version>1.1.3</groovy-wslite.version>
		<groovy.version>3.0.7</groovy.version>

		<java.version>15</java.version>

	</properties>



	<dependencies>

		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>${groovy.version}</version>
		</dependency>


<dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-api</artifactId>
    <version>5.7.0</version>
    <scope>test</scope>
</dependency>

<dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-engine</artifactId>
    <version>5.7.0</version>
    <scope>test</scope>
</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.gmavenplus</groupId>
				<artifactId>gmavenplus-plugin</artifactId>
				<version>${gmavenplus.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>addSources</goal>
							<goal>compile</goal>
							<goal>compileTests</goal>
						</goals>
					</execution>
				</executions>

			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				        <configuration>
            <argLine>--enable-preview</argLine>
        </configuration>
			</plugin>

			<plugin>

				<artifactId>maven-compiler-plugin</artifactId>
	

				<configuration>
					<release>15</release>
					<compilerArgs>--enable-preview</compilerArgs>
					<fork>true</fork>
					<forceJavacCompilerUse>true</forceJavacCompilerUse>
					<parameters>true</parameters>
					<executable>${JAVA_1_15_HOME}/bin/javac</executable>
				</configuration>
			</plugin>


		</plugins>
	</build>

</project>
